@@ -294,6 +294,7 @@ sub install_server {
 
     if ($card->{Driver2}) {       
 	require Xconfig::proprietary;
+	Xconfig::proprietary::handle_DRIVER2_NO_SSE($card);
 	my @pkgs = Xconfig::proprietary::pkgs_for_Driver2($card->{Driver2}, $do_pkgs);
 	if (@pkgs && (!$o_in || $o_in->ask_yesorno('', formatAlaTeX(N("There is a proprietary driver available for your video card which may support additional features.
 Do you wish to use it?")), 1))) {
@@ -461,6 +462,7 @@ sub readCardsDB {
 	CHIPSET => sub { $card->{Chipset} = $val },
 	DRIVER => sub { $card->{Driver} = $val },
 	DRIVER2 => sub { $card->{Driver2} = $val },
+	DRIVER2_NO_SSE => sub { $card->{DRIVER2_NO_SSE} = $val },
 	NEEDVIDEORAM => sub { $card->{needVideoRam} = 1 },
 	DRI_GLX => sub { $card->{DRI_GLX} = 1 if $card->{Driver} },
 	DRI_GLX_EXPERIMENTAL => sub { $card->{DRI_GLX_EXPERIMENTAL} = 1 if $card->{Driver} },
