@@ -2,6 +2,7 @@
   o if the EDID gives a valid 16/10 preferred resolution (even if duplicated),
     but no HorizSync/VertRefresh, use a generic flat panel
     HorizSync/VertRefresh (needed for edid.lcd.dell-inspiron-6400, #37971)
+  o handle DRIVER2_NO_SSE (from Cards+), needed by nvidia-current requiring SSE
 
 Version 0.49 - 28 February 2008
 
